tests/error/wasm_errors/wasm_func_without_module.err
Error: WASM signature error (at $FILE:11:0)
   | 
 9 | 
10 | @wasm
11 | def foo(x: int) -> None: ...
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ First argument to WASM function should be a WASM module.
   | 
11 | def foo(x: int) -> None: ...
   | ---------------------------- Found `int` instead.

Guppy compilation failed due to 1 previous error
